// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/toggle/Toggle should render properly when isToggleRightAligned prop is true 1`] = `
<div
  className="toggle-container is-toggle-right-aligned"
>
  <label
    className="toggle-simple"
  >
    <input
      className="toggle-simple-input"
      name="toggle"
      onChange={[Function]}
      type="checkbox"
    />
    <div
      className="toggle-simple-label"
      key="toggle-simple-label"
    >
      Enter things
    </div>
    <div
      className="toggle-simple-switch"
      key="toggle-simple-switch"
    />
  </label>
</div>
`;

exports[`components/toggle/Toggle should render properly when random props are passed in 1`] = `
<div
  className="toggle-container"
>
  <label
    className="toggle-simple"
  >
    <input
      className="toggle-simple-input"
      data-resin-target="toggle"
      name="toggle"
      onChange={[Function]}
      type="checkbox"
    />
    <div
      className="toggle-simple-switch"
      key="toggle-simple-switch"
    />
    <div
      className="toggle-simple-label"
      key="toggle-simple-label"
    >
      Enter things
    </div>
  </label>
</div>
`;
